--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,12 @@ spring:
     username: root
     password: 111111
     driver-class-name: com.mysql.cj.jdbc.Driver
-
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+      password: 111111
+      database: 3
 
 dietassistant:
   jwt:
